--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -25,6 +25,9 @@
         <a class="nav-link" href="{{ url_for('main.index') }}">Ingresar Datos</a>
     </li>
     <li class="nav-item">
+        <a class="nav-link" href="{{ url_for('main.upload_excel') }}">Carga Masiva</a>
+    </li>
+    <li class="nav-item">
         <a class="nav-link" href="{{ url_for('main.list_copropiedades') }}">Copropiedades</a>
     </li>
     <li class="nav-item">
