--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -24,12 +24,20 @@
     <li class="nav-item">
         <a class="nav-link" href="{{ url_for('main.index') }}">Ingresar Datos</a>
     </li>
+      <li class="nav-item">
+        <a class="nav-link" href="{{ url_for('main.index') }}">Nuevo Inmueble</a>
+    </li>
+    <li class="nav-item">
+        <a class="nav-link" href="{{ url_for('main.list_propiedades') }}">Listar Inmuebles</a>
+    </li>
     <li class="nav-item">
         <a class="nav-link" href="{{ url_for('main.upload_excel') }}">Carga Masiva</a>
     </li>
+    {% if current_user.is_admin %}
     <li class="nav-item">
         <a class="nav-link" href="{{ url_for('main.list_copropiedades') }}">Copropiedades</a>
     </li>
+    {% endif %}
     <li class="nav-item">
         <a class="nav-link" href="{{ url_for('main.download_excel_data') }}">Descargar Excel</a>
     </li>
