Adicion filtro de busqueda en "propiedades" y Logo GJ

--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -12,6 +12,9 @@
 </head>
 <body>
     <nav class="navbar navbar-expand-lg navbar-dark bg-dark mb-4">
+            <div class="container text-center mb-4">
+                <img src="{{ url_for('static', filename='img/logoGJ.png') }}" alt="Logo" class="img-fluid" style="max-height: 100px;">
+            </div>
         <div class="container">
             <a class="navbar-brand" href="{{ url_for('main.index') }}">Sistema Gestion Copropiedades Administraciones GJ Ltda</a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
