--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -34,6 +34,9 @@
     <li class="nav-item">
         <a class="nav-link" href="{{ url_for('main.upload_excel') }}">Carga Masiva</a>
     </li>
+    <li class="nav-item">
+        <a class="nav-link" href="{{ url_for('main.generate_report') }}">Generar Reporte</a>
+    </li>
     {% if current_user.is_admin %}
     <li class="nav-item">
         <a class="nav-link" href="{{ url_for('main.list_copropiedades') }}">Copropiedades</a>
