--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -2,7 +2,7 @@
 <html lang="es">
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0, shrink-to-fit=no">
     <title>{{ title }} - Mi Aplicación</title>
     <!-- Bootstrap CSS -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet">
@@ -16,7 +16,7 @@
                 <img src="{{ url_for('static', filename='img/logoGJ.png') }}" alt="Logo" class="img-fluid" style="max-height: 100px;">
             </div>
         <div class="container">
-            <a class="navbar-brand" href="{{ url_for('main.index') }}">Sistema Gestion Copropiedades Administraciones GJ Ltda</a>
+            <a class="navbar-brand" href="{{ url_for('main.index') }}">Sistema Gestion Copropiedades</a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
             </button>
