--- a/app/templates/users/list.html
+++ b/app/templates/users/list.html
@@ -7,6 +7,7 @@
         <a href="{{ url_for('main.new_user') }}" class="btn btn-primary">Nuevo Usuario</a>
     </div>
     
+<div class="table-responsive">   
     <table class="table table-striped">
         <thead>
             <tr>
@@ -31,6 +32,7 @@
             </tr>
             {% endfor %}
         </tbody>
-    </table>
+    </table> 
+</div> 
 </div>
 {% endblock %}
