Adicion campo busqueda pagina:/propiedades y restriccion edicion informacion inmueble al usuario no_admin

--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -29,7 +29,7 @@
         <a class="nav-link" href="{{ url_for('main.index') }}">Nuevo Inmueble</a>
     </li>
     <li class="nav-item">
-        <a class="nav-link" href="{{ url_for('main.list_propiedades') }}">Listar Inmuebles</a>
+        <a class="nav-link" href="{{ url_for('main.list_propiedades') }}">Editar Inmuebles</a>
     </li>
     <li class="nav-item">
         <a class="nav-link" href="{{ url_for('main.upload_excel') }}">Carga Masiva</a>
