--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, shrink-to-fit=no">
-    <title>{{ title }} - Mi Aplicación</title>
+    <title>{{ title }} - Mi Aplicacion</title>
     <!-- Bootstrap CSS -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet">
     <!-- Tu CSS personalizado (opcional) -->
@@ -13,7 +13,7 @@
 <body>
     <nav class="navbar navbar-expand-lg navbar-dark bg-dark mb-4">
             <div class="container text-center mb-4">
-                <img src="{{ url_for('static', filename='img/logoGJ.png') }}" alt="Logo" class="img-fluid" style="max-height: 100px;">
+                <img src="{{ url_for('static', filename='img/logoGJ.png') }}" alt="logo" class="img-fluid" style="max-height: 100px;">
             </div>
         <div class="container">
             <a class="navbar-brand" href="{{ url_for('main.index') }}">Sistema Gestion Copropiedades</a>
